# gemini_chat

./: Cargo.toml  build.rs
src/: get_message.rs  main.rs  updata.rs  worker.rs
ui/: ui.slint
