[package]
name = "gemini_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3.2"
futures = "0.3"
tokio = {version = "1.35",default-features = false,features = ["full"]}
reqwest = { version = "0.11.4", features = ["multipart", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"

[build-dependencies]
slint-build = "1.3.2"
embed-resource = "2.4"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
strip = true
